--- a/BindingsTest/BindingsTest.csproj
+++ b/BindingsTest/BindingsTest.csproj
@@ -13,5 +13,6 @@
   <ItemGroup>
     <Folder Include="Views\" />
     <Folder Include="ViewModels\" />
+    <Folder Include="Interfaces\" />
   </ItemGroup>
 </Project>
