--- a/VIsio.iOS/VIsio.iOS.csproj
+++ b/VIsio.iOS/VIsio.iOS.csproj
@@ -33,6 +33,9 @@
   <ItemGroup>
     <Reference Include="System" />
     <Reference Include="Xamarin.iOS" />
+    <Reference Include="Visio.Droid">
+      <HintPath>..\Visio.Droid\bin\Debug\Visio.Droid.dll</HintPath>
+    </Reference>
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Resources\" />
